[package]
name = "blockchain"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
hex-literal = "0.3.4"
serde_json = "1.0.70"
serde = { version = "1.0.130", features = ["derive"] }
rustc-serialize = "0.3.24"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"

[[bin]]
name = "blockchain"
path = "src/main.rs"
